# pygtide

./: .gitignore  CHANGELOG  MANIFEST.in  Makefile  PREDICT DOC.txt  README.docx  README.md  README.txt  build.py  build_pygtide_abi.py  compile_etpred.py  environment.yml  etpred.cp35-win_amd64.pyd  etpred.cp36-win_amd64.pyd  etpred.cp37-win_amd64.pyd  etpred.cp38-win_amd64.pyd  etpred.cp39-win_amd64.pyd  etpred.f90  etpred.pyf  etpred_old-IUN.f90  etpred_program.f90  meson.build  module_test.py  predictk.prj  pygtide.out.prd  pygtide.out.prn  pygtide.py  pyproject.toml  setup.cfg  setup.py  test.py  test_pygtide_waves-all.py  test_pygtide_waves-custom.py  update_commdat.py  update_commdat_old.py
.github/: test_conda_env.yml
.github/workflows/: build_and_publish.yml  pypi.yml  tests.yml  wheels.yml
_update_commdat/: DeltaT values.url  ET-UTC.url  README.docx  UTC and TDT.url  __update_etpolut1.py  _test.py  _write_fbin.py  create_etpolut1.py  etpolut1_bin.py  update_etddt.py  update_etpolut1.py
_update_commdat/fortran/: Makefile  iers-update.prj  iers1.f  iers1.f90  iers1.ini
commdat/: pygtide.waves.ini
docs/: background.md  configuration.md  installation.md  quickstart.md  troubleshooting.md  usage.md
etpred/: __init__.py  etpred.cp37-win_amd64.pyd
modules/: control3.mod  control4.mod  ddt_mod.mod  inout.mod  love.mod  max_pars.mod  params.mod  tidphas.mod  tidwave1.mod  tidwave2.mod
pygtide/: __init__.py  core.py  pygtide.py  pygtide_update_data.py  tests.py  update.py  update_etpred_data.py
pygtide/commdat/: pygtide.waves.ini
src/: etpred.f90  etpred_v1.f90
windows/: pygtide-0.8-cp310-cp310-win_amd64.whl  pygtide-0.8-cp311-cp311-win_amd64.whl  pygtide-0.8-cp38-cp38-win_amd64.whl  pygtide-0.8-cp39-cp39-win_amd64.whl
