[build-system]
requires = [
    "meson-python",
    "meson>=1.1.0",
    "ninja",
    "numpy>=1.21.0",
]
build-backend = "mesonpy"

[project]
name = "pygtide"
version = "0.8.0
description = "A Python module and wrapper for ETERNA PREDICT to compute gravitational tides on Earth"
readme = "README.md"
license = {text = "MPL-2.0"}
authors = [
    {name = "Gabriel C. Rau", email = "gabriel@hydrogeo.science"},
    {name = "Tom Eulenfeld"},
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas",
    "requests",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/hydrogeoscience/pygtide"
Documentation = "https://hydrogeo.science"
Repository = "https://github.com/hydrogeoscience/pygtide.git"
Issues = "https://github.com/hydrogeoscience/pygtide/issues"
