[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "numpy>=1.21.0",
    "meson",
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "pygtide"
version = "0.8.0"
description = "A Python module and wrapper for ETERNA PREDICT to compute gravitational tides on Earth"
readme = "README.md"
license = "MPL-2.0"
requires-python = ">=3.8"
authors = [
    { name = "Gabriel C. Rau", email = "gabriel@hydrogeo.science" },
    { name = "Tom Eulenfeld" }
]
dependencies = [
    "numpy>=1.21.0",
    "pandas",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics"
]

[project.urls]
Homepage = "https://github.com/hydrogeoscience/pygtide"
Documentation = "https://hydrogeo.science"
Repository = "https://github.com/hydrogeoscience/pygtide.git"
Issues = "https://github.com/hydrogeoscience/pygtide/issues"

# ----------------------------
# Setuptools-specific configuration
# ----------------------------
[tool.setuptools]
packages = ["pygtide"]             # <-- move packages here
include-package-data = true        # include package data

[tool.setuptools.package-data]
pygtide = ["etpred.*", "commdat/*"]
